--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>FizzBuzz</title>
 </head>
 <body>
-    <script src="js/script.js" charset="utf-8"></script>
+    <div class="container">
+        <!-- <div class="overlay"></div> -->
+        <div class="main">
+            <h1>FizzBuzz! What a fun!</h1>
+            <hr>
+            <div id="stampa"></div>
+            <script src="js/script.js" charset="utf-8"></script>
+        </div>
+    </div>
 </body>
 </html>
